force-app/main/default/objects/Beer__c/Beer__c.object-meta.xml
<CustomObject>
    <description>Beer Object</description>
    <label>Beer</label>
    <nameField>
        <label>Beer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>