force-app/main/default/objects/Beer__c/fields/Brewery_ID__c.field-meta.xml
<CustomField>
    <fullName>Brewery_ID__c</fullName>
    <description>ID of the Brewery</description>
    <label>Brewery ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>