force-app/main/default/objects/Beer__c/fields/Brewery_Name__c.field-meta.xml
<CustomField>
    <fullName>Brewery_Name__c</fullName>
    <description>Name of the Brewery</description>
    <label>Brewery Name</label>
    <type>TextArea</type>
</CustomField>